--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -54,7 +54,7 @@ if ($giftCards = $block->getGiftCards()) {
 
 <?php
 if ($method = $block->getPayPerEmailMethod()) { ?>
-    <div class="buckaroo_magento2_payment_" style="margin-bottom:10px">
+    <div class="buckaroo_magento2_payment_">
         <?php echo $block->escapeHtml($method['label']) ?>
     </div>
 <?php } ?>
