--- a/view/frontend/layout/checkout_cart_index.xml
+++ b/view/frontend/layout/checkout_cart_index.xml
@@ -21,7 +21,7 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Buckaroo_Magento2::css/ideal-fast-checkout.css" />
+        <css src="Buckaroo_Magento2::css/express-payments.css" />
     </head>
     <body>
 
@@ -30,11 +30,11 @@
                    name="buckaroo.paypal.express.cart.button"
                    template="Buckaroo_Magento2::checkout/cart/paypal-express.phtml"
                    after="-"/>
-            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" 
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay"
                    name="buckaroo_magento2.checkout.cart.applepay"
                    template="Buckaroo_Magento2::checkout/cart/applepay.phtml"
                    after="buckaroo.paypal.express.cart.button"/>
-            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\IdealFastCheckout" 
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\IdealFastCheckout"
                    name="buckaroo_magento2.checkout.cart.ideal.fast.checkout"
                    template="Buckaroo_Magento2::checkout/cart/ideal-fast-checkout.phtml"
                    after="buckaroo_magento2.checkout.cart.applepay"/>
