--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -21,7 +21,7 @@
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Buckaroo_Magento2::css/ideal-fast-checkout.css" />
+        <css src="Buckaroo_Magento2::css/express-payments.css" />
     </head>
     <body>
 
