--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -20,7 +20,7 @@
 
 /** @var string $block */
 
-if ($block->canShowButton('Product')): ?>
+if ($block->canShowButton('Product') && !$block->isIdinVerificationRequired()): ?>
     <div id="apple-pay-catalog-product-view-component" data-bind="scope:'buckarooApplepayProduct'">
         <!-- ko template: getTemplate() --><!-- /ko -->
 
