--- a/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/catalog/product/view/ideal-fast-checkout.phtml
@@ -21,7 +21,7 @@
 
 /** @var string $block */
 
-if ($block->canShowButton('Product')): ?>
+if ($block->canShowButton('Product') && !$block->isIdinVerificationRequired()): ?>
 
     <div id="fast-checkout-ideal-btn-component" data-bind="scope: 'fastCheckoutIdeal'">
         <button id="fast-checkout-ideal-btn" type="button">
