--- a/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
+++ b/view/frontend/templates/checkout/cart/ideal-fast-checkout.phtml
@@ -20,7 +20,7 @@
  */
 /** @var string $block */
 
-if ($block->canShowButton('Cart')): ?>
+if ($block->canShowButton('Cart') && !$block->isIdinVerificationRequired()): ?>
 
     <div id="fast-checkout-ideal-btn-component" data-bind="scope: 'fastCheckoutIdeal'">
         <button id="fast-checkout-ideal-btn" type="button">
