update: enhance credentials checker with configurable element and improved error handling

--- a/view/adminhtml/templates/credentials_checker.phtml
+++ b/view/adminhtml/templates/credentials_checker.phtml
@@ -21,9 +21,12 @@
 <script type="text/x-magento-init">
 {
     "#buckaroo_magento2_credentials_checker_button": {
-        "Buckaroo_Magento2/js/view/adminhtml/credentials-checker": {}
+        "Buckaroo_Magento2/js/view/adminhtml/credentials-checker": {
+            "element": "#buckaroo_magento2_credentials_checker_button"
+        }
     }
 }
 </script>
+
 <?= $block->getHtml() ?>
 <p class="note"><span id="buckaroo_magento2_credentials_checker_msg"></span></p>
