--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -1,4 +1,4 @@
-<!-- ko if: buckaroo.groupGiftcards -->
+<!-- ko if: shouldShowGrouped() -->
 <div class="buckaroo_magento2_giftcards buckaroo_magento2_giftcards_group payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
@@ -71,10 +71,9 @@
 
 <!-- /ko -->
 
-<!-- ko if: buckaroo.groupGiftcards === false && buckaroo.availableGiftcards.length -->
-
-<div class="buckaroo_magento2_all_giftcards" data-bind="afterRender: $parent.checkForPayments, foreach: { data: buckaroo.availableGiftcards, as: 'giftcard', noChildContext: false }">
-    <div data-bind="attr: { 'class': 'buckaroo_magento2_all_giftcard payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.currentGiftcard() == code)}">
+<!-- ko ifnot: shouldShowGrouped() -->
+<!-- ko foreach: { data: buckaroo.availableGiftcards, as: 'giftcard', noChildContext: false } -->
+<div data-bind="attr: { 'class': 'buckaroo_magento2_' + code + ' payment-method' }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.currentGiftcard() == code)}">
 
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
@@ -82,9 +81,12 @@
                 <input type="radio"
                        name="payment[method]"
                        class="radio"
-                       data-bind="attr: {'id': code}, value: code, checked: $parent.currentGiftcard,
-                       event: { change:$parent.selectGiftCardPaymentMethod.bind($parent, code)}"/>
-                <label class="label" data-bind="attr: {'for': code}" >
+                       data-bind="attr: {'id': 'buckaroo_magento2_giftcards_' + code, 'data-method': 'buckaroo_magento2_giftcards'}, 
+                       value: 'buckaroo_magento2_giftcards',
+                       event: { change: $parent.selectGiftcardMethod.bind($parent, code) },
+                       checked: $parent.isChecked,
+                       visible: $parent.isRadioButtonVisible()"/>
+                <label class="label" data-bind="attr: {'for': 'buckaroo_magento2_giftcards_' + code}">
                     <!-- ko text: title --><!-- /ko -->
                 </label>
             </div>
@@ -97,106 +99,105 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- ko if: ($parent.getCode() == $parent.isChecked() && $parent.currentGiftcard() == code) -->
+    <div class="payment-method-content">
+        <!-- ko foreach: $parent.getRegion('messages') -->
+        <!-- ko template: getTemplate() --><!-- /ko -->
+        <!--/ko-->
+
+        <div class="payment-method-billing-address">
+            <!-- ko foreach: $parents[1].getRegion($parent.getBillingAddressFormName()) -->
+            <!-- ko template: getTemplate()--><!-- /ko -->
+            <!--/ko-->
         </div>
 
-        <div class="payment-method-content">
-            <!-- ko foreach: $parent.getRegion('messages') -->
-            <!-- ko template: getTemplate() --><!-- /ko -->
-            <!--/ko-->
-
-            <div class="payment-method-billing-address">
-                <!-- ko foreach: $parent.getRegion($parent.getBillingAddressFormName()) -->
-                        <!-- ko template: getTemplate()--><!-- /ko -->
-                <!--/ko-->
-            </div>
-
-        <div class="payment-method-second-col billing-address-form">
-            <form method="post"
-                  data-bind="
-                  mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}">
+        <form>
+            <div class="payment-method-second-col billing-address-form">
                 <fieldset class="fieldset payment styled">
                     <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <div class="fieldset card_front width-100">
 
-                        <div class="field required width-100" >
-                            <label class="label" for="buckaroo_magento2_giftcards_cardnumber"> <span data-bind="i18n: 'Card number:'"> </span> </label>
+                        <div class="field required width-100">
+                            <label class="label" data-bind="attr: {'for': 'buckaroo_magento2_giftcards_cardnumber_' + code}">
+                                <span data-bind="i18n: 'Card number:'"></span>
+                            </label>
                             <div class="control">
                                 <input type="text"
                                        class="input-text field buckaroo_magento2_giftcards_input"
-                                       name="payment[buckaroo_magento2_giftcards][cardnumber]"
-                                       data-bind="
+                                       data-bind="attr: {'id': 'buckaroo_magento2_giftcards_cardnumber_' + code, 'name': 'payment[buckaroo_magento2_giftcards][cardnumber_' + code + ']'},
                                         valueUpdate: 'blur',
                                         value: $parent.cardNumber,
                                         attr: {
-                                            'data-card': code, 
                                             'data-validate': JSON.stringify({ 'required': true })
                                         }">
                             </div>
                         </div>
 
-                    <div class="fieldset width-100">
+                        <div class="fieldset width-100">
+                            <div class="magnet_stripe width-100"></div>
 
-                        <div class="magnet_stripe width-100"></div>
-
-                        <div class="field required card_security width-100" >
-                            <label class="label width-65-l" for="buckaroo_magento2_giftcards_pin"> <span data-bind="i18n: 'PIN / Security code:'"> </span> </label>
-                            <div class="control card-info-input width-25-l">
-                                <input type="text"
-                                       class="input-text field buckaroo_magento2_giftcards_input"
-                                       name="payment[buckaroo_magento2_giftcards][pin]"
-                                       data-bind="
-                                        valueUpdate: 'blur',
-                                        value: $parent.pin,
-                                        attr: {
-                                            'data-validate': JSON.stringify({ 'required': true })
-                                        }">
+                            <div class="field required card_security width-100">
+                                <label class="label width-65-l" data-bind="attr: {'for': 'buckaroo_magento2_giftcards_pin_' + code}">
+                                    <span data-bind="i18n: 'PIN / Security code:'"></span>
+                                </label>
+                                <div class="control card-info-input width-25-l">
+                                    <input type="text"
+                                           class="input-text field buckaroo_magento2_giftcards_input"
+                                           data-bind="attr: {'id': 'buckaroo_magento2_giftcards_pin_' + code, 'name': 'payment[buckaroo_magento2_giftcards][pin_' + code + ']'},
+                                            valueUpdate: 'blur',
+                                            value: $parent.pin,
+                                            attr: {
+                                                'data-validate': JSON.stringify({ 'required': true })
+                                            }">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="field width-100">
-                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' "></span>
-                        <span class="apply-gift-card action primary" data-bind="
-                            click: $parent.applyGiftcard.bind($parent),
-                            i18n: 'Apply Gift Card'">
-                        </span>
-                    </div>
-
+                        <div class="field width-100">
+                            <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.'"></span>
+                            <span class="apply-gift-card action primary" data-bind="
+                                click: $parent.applyGiftcard.bind($parent),
+                                i18n: 'Apply Gift Card'">
+                            </span>
+                        </div>
                     </div>
                 </fieldset>
-            </form>
-        </div>
+            </div>
+        </form>
 
-            <div class="checkout-agreements-block">
-                <!-- ko foreach: $parents[1].getRegion('before-place-order') -->
-                        <!-- ko template: getTemplate() --><!-- /ko -->
-                <!--/ko-->
-            </div>
-
-             <!-- ko if: $parent.alreadyFullPayed() -->
-            <div class="actions-toolbar">
-                <div class="primary">
-                    <button class="action primary checkout"
-                            type="submit"
-                            data-bind="
-                            click: $parent.placeOrder.bind($parent),
-                            attr: {title: $t('Place Order')},
-                            enable: ($parent.getCode() == $parent.isChecked())
-                            "
-                            disabled>
-                        <span data-bind="i18n: 'Place Order'"></span>
-                    </button>
-                </div>
-            </div>
-            <!--/ko-->
-            <!-- ko if: $parent.payWithBaseCurrency() -->
-            <div class="buckaroo_magento2_currency-notification">
-                <span data-bind="text: $parent.getPayWithBaseCurrencyText()"></span>
-            </div>
+        <div class="checkout-agreements-block">
+            <!-- ko foreach: $parent.getRegion('before-place-order') -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
+
+        <!-- ko if: $parent.alreadyFullPayed() -->
+        <div class="actions-toolbar">
+            <div class="primary">
+                <button class="action primary checkout"
+                        type="submit"
+                        data-bind="
+                        click: $parent.placeOrder.bind($parent),
+                        attr: {title: $t('Place Order')},
+                        enable: ($parent.getCode() == $parent.isChecked())
+                        "
+                        disabled>
+                    <span data-bind="i18n: 'Place Order'"></span>
+                </button>
+            </div>
+        </div>
+        <!--/ko-->
+
+        <!-- ko if: $parent.payWithBaseCurrency() -->
+        <div class="buckaroo_magento2_currency-notification">
+            <span data-bind="text: $parent.getPayWithBaseCurrencyText()"></span>
+        </div>
+        <!--/ko-->
     </div>
+    <!-- /ko -->
 </div>
+<!-- /ko -->
 
 <!-- /ko -->
