update: refactor payment method templates for improved readability and consistency

--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -19,8 +19,7 @@
  */
 
 /** @var string $block */
-?>
-<?php if ($block->canShowButton('Cart')): ?>
+if ($block->canShowButton('Cart')): ?>
     <div id="apple-pay-catalog-cart-view-component" data-bind="scope:'buckarooApplepayCart'">
         <!-- ko template: getTemplate() --><!-- /ko -->
 
