--- a/view/frontend/templates/checkout/cart/paypal-express.phtml
+++ b/view/frontend/templates/checkout/cart/paypal-express.phtml
@@ -1,5 +1,4 @@
 <?php
-
 /**
  * NOTICE OF LICENSE
  *
@@ -18,8 +17,9 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
-?>
-<?php if ($block->canShowCartButton() && !$block->isIdinVerificationRequired()): ?>
+
+/** @var string $block */
+if ($block->canShowCartButton() && !$block->isIdinVerificationRequired()): ?>
     <div class="box-tocart">
         <div class="fieldset">
             <div class="actions">
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="buckaroo-paypal-express"></div>
-    
+
     <script type="text/x-magento-init">
     {
         "#paypal-express-wrapper": {
