--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -21,7 +21,7 @@
  -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="checkout" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Buckaroo_Magento2::css/credit-cards.css"/>
+        <css src="Buckaroo_Magento2::css/credit-cards.css" />
         <css src="Buckaroo_Magento2::css/styles.css" />
     </head>
 
@@ -47,19 +47,24 @@
                                                                 <item name="buckaroo_fee" xsi:type="array">
                                                                     <item name="component"  xsi:type="string">Buckaroo_Magento2/js/view/summary/totals</item>
                                                                     <item name="config" xsi:type="array">
-                                                                        <item name="title" xsi:type="string">Buckaroo Fee</item>
+                                                                        <item name="title" xsi:type="string">Payment Fee</item>
                                                                     </item>
                                                                 </item>
                                                             </item>
                                                         </item>
-                                                        <item name="grand-total" xsi:type="array">
-                                                            <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/summary/grand-total</item>
-                                                            <item name="config" xsi:type="array">
-                                                                <item name="exclTaxLabel" xsi:type="string" translate="true">Order Total Excl. Tax</item>
-                                                                <item name="inclTaxLabel" xsi:type="string" translate="true">Order Total Incl. Tax</item>
-                                                                <item name="basicCurrencyMessage" xsi:type="string" translate="true">You will be charged for</item>
-                                                                <item name="title" xsi:type="string" translate="true">Order Total</item>
-                                                            </item>
+                                                        <!-- Remaining Amount Component -->
+                                                        <item name="remaining_amount" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/summary/remaining-amount</item>
+                                                            <item name="sortOrder" xsi:type="string">250</item> <!-- Adjust sortOrder as needed -->
+                                                            <item name="title" xsi:type="string" translate="true">Remaining Amount</item>
+                                                            <item name="is_always_shown" xsi:type="boolean">false</item>
+                                                        </item>
+                                                        <!-- Already Paid Component -->
+                                                        <item name="already_paid" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/summary/already-paid</item>
+                                                            <item name="sortOrder" xsi:type="string">300</item> <!-- Adjust sortOrder as needed -->
+                                                            <item name="title" xsi:type="string" translate="true">Already Paid</item>
+                                                            <item name="is_always_shown" xsi:type="boolean">false</item>
                                                         </item>
                                                     </item>
                                                 </item>
