fix: update documentation links in support tab for accuracy

--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -70,7 +70,7 @@
     <hr class="bk-hr-line">
     <h3 class="bk-h3"><?= $block->escapeHtml(__('Documentation:'));?></h3>
     <div class="bk-flex bk-mb-5px">
-        <a href="https://docs.buckaroo.io/docs/magento-20" target="_blank" rel="noopener" class="bk-btn">
+        <a href="https://docs.buckaroo.io/docs/magento-2-new" target="_blank" rel="noopener" class="bk-btn">
             <?= $block->escapeHtml(__('Magento Documentation'));?>
         </a>
 
@@ -78,7 +78,7 @@
             <?= $block->escapeHtml(__('Github'));?>
         </a>
 
-        <a href="https://docs.buckaroo.io/v1/docs/magento-20-releases" target="_blank" rel="noopener" class="bk-btn bk-ml-10px">
+        <a href=" https://github.com/buckaroo-it/Magento2/releases" target="_blank" rel="noopener" class="bk-btn bk-ml-10px">
             <?= $block->escapeHtml(__('Changelog'));?>
         </a>
     </div>
