BP-4507-Payoniq-checkout-redirect-fails

--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -1,10 +1,10 @@
 <div id="buckaroo_magento2_payconiq_loader" class="loading-mask"></div>
 
-<div id="buckaroo_magento2_payconiq_container">
+<div id="buckaroo_magento2_payconiq_container" data-bind="scope: 'payconiq'">
     <div id="buckaroo_magento2_payconiq_items">
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
-        <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
+        <button id="buckaroo_magento2_payconiq_cancel" type="button" title="<?= $block->escapeHtml(__('Cancel')) ?>" onclick="window.cancelPayment()">
             <span><?= $block->escapeHtml(__('Cancel')) ?></span>
         </button>
     </div>
