--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay_client.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay_client.html
@@ -62,7 +62,7 @@
             <!--/ko-->
         </div>
 
-        <div class="actions-toolbar" style="display: none;">
+        <div class="actions-toolbar" data-bind="visible: canShowPaymentMethod()">
             <div class="primary">
                 <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton"></div>
             </div>
