--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay_redirect.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay_redirect.html
@@ -16,7 +16,7 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  -->
-<div class="buckaroo_magento2_applepay payment-method" data-bind="css: {'_active': (getCode() == isChecked())}, visible: canShowPaymentMethod()">
+<div class="buckaroo_magento2_applepay payment-method" data-bind="css: {'_active': (getCode() == isChecked())}" >
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -85,4 +85,4 @@
             </div>
         </div>
     </div>
-</div> 
+</div>
