feat: remove Apple Pay button wrapper and rely on Place Order button for checkout

--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay_client.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay_client.html
@@ -62,7 +62,11 @@
             <!--/ko-->
         </div>
 
-        <!-- Apple Pay button wrapper removed - using only Place Order button for checkout -->
+        <div class="actions-toolbar" data-bind="visible: canShowPaymentMethod()" style="display: none;">
+            <div class="primary">
+                <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton"></div>
+            </div>
+        </div>
 
         <!-- ko if: payWithBaseCurrency() -->
         <div class="buckaroo_magento2_currency-notification">
