--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -73,6 +73,17 @@
                         <div class="col-span-1">
                             <label id="cc-cvc-label" for="cc-cvc-wrapper" class="label">
                                 <span data-bind="i18n: 'CVC:'"></span>
+                                <span class="buckaroo-cvc-tooltip-wrapper">
+                                    <button type="button" class="buckaroo-cvc-tooltip-button" aria-label="CVC Help">
+                                        <svg class="buckaroo-tooltip-icon" fill="currentColor" viewBox="0 0 20 20">
+                                            <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path>
+                                        </svg>
+                                    </button>
+                                    <div class="buckaroo-cvc-tooltip" style="display: none;">
+                                        <span data-bind="i18n: 'The CVC/CVV code is a 3 or 4-digit security code on your credit card.'"></span>
+                                        <div class="buckaroo-tooltip-arrow"></div>
+                                    </div>
+                                </span>
                             </label>
                             <div id="cc-cvc-wrapper"
                                  class="shadow h-12 appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
