feat: add Swish payment method integration

--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -129,6 +129,9 @@
                                                                         <item name="buckaroo_magento2_bizum" xsi:type="array">
                                                                         <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                     </item>
+                                                                        <item name="buckaroo_magento2_swish" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
                                                                         <item name="buckaroo_magento2_twint" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
