update: improve HTML escaping in templates and clean up code formatting

--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -29,7 +29,7 @@
                 type="button"
                 title="Cancel"
                 data-bind="click: cancelPayment">
-            <span><?= __('Cancel') ?></span>
+            <span><?= $escaper->escapeHtml(__('Cancel')) ?></span>
         </button>
     </div>
 </div>
